--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,20 @@ header {
     margin-bottom: 20px;
     animation: slideUp 1s ease-out;
 }
+#restaurant-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 5px;
+    background-color: #5dff00;
+}
+
+#restaurant-progress {
+    width: 0;
+    height: 100%;
+    background-color: #afffb2;
+}
 
 .logo {
     width: 120px;
